--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,15 +1,21 @@
+// $darkblue: #3658BF;
+// $grey: #6C7073;
+// $black: #1F2426;
+// $lightblue: #07C7F2;
+// $white: #F2F2F2;
+
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #3658BF;
+$secondary-color: #07C7F2;
 
 // $primary-color: #7f449d;
 // $secondary-color: #793fc1;
 
-$white-color: #fff;
+$white-color: #F2F2F2;
 
-$dark-grey: #333333;
+$dark-grey: #1F2426;
 
-$dark-blue-text: #272341; // For Headings
+$dark-blue-text: #1F2426; // For Headings
 
 // FONT SIZE
 $default-font-size: 1.6rem;
