update about and resume

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -14,6 +14,7 @@ $secondary-color: #07C7F2;
 $white-color: #F2F2F2;
 
 $dark-grey: #1F2426;
+$light-grey: #6C7073;
 
 $dark-blue-text: #1F2426; // For Headings
 
