--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -38,6 +38,13 @@ a:hover {
   color: $dark-blue-text !important;
 }
 
+.text-color-white {
+  color: $white-color;
+  &:hover {
+    color: $white-color;
+  }
+}
+
 .text-color-main {
   background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
   -webkit-background-clip: text;
