--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -65,6 +65,7 @@
   color: $white-color;
   border: 2px solid $white-color;
   margin-right: 15px;
+  background-color: transparent;
 
   &::after {
     background: $white-color;
@@ -77,6 +78,28 @@
     &::after {
       width: 100%;
     }
+  }
+}
+.cta-btn--filter {
+  color: $primary-color;
+  border: 2px solid $primary-color;
+  margin-right: 15px;
+
+  &::after {
+    background: $secondary-color;
+  }
+
+  &:hover, &.selected {
+    color: $white-color;
+    text-decoration: none;
+
+    &::after {
+      width: 100%;
+    }
+  }
+
+  &.selected::after {
+    background: $primary-color;
   }
 }
 .cta-btn--linkedin {
